--- a/beautiful.html
+++ b/beautiful.html
@@ -5,15 +5,23 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">Welcome to ZiBong World</a></h1>
+  <h1><a href="index.html"
+  style="text-decoration:none">
+  Welcome to ZiBong World</a></h1>
   <ol>
-    <li><a href="who.html">Who is ZiBong??</a></li>
-    <li><a href="how.html">How is she?</a></li>
-    <li><a href="beautiful.html">Is she beautiful?</a></li>
+    <li><a href="who.html"
+    style="text-decoration:none">
+    Who is ZiBong??</a></li>
+    <li><a href="how.html"
+    style="text-decoration:none">
+    How is she?</a></li>
+    <li><a href="beautiful.html"
+    style="text-decoration:none; background-color:blue; color:white;">Is she beautiful?</a></li>
   </ol>
-<h2>이쁨?</h2>
-  <p>ㅇㅇ 이쁨
-  </p>
+  <div style="margin-left:30px">
+  <h2>이쁨?</h2>
+  ㅇㅇ 이쁨
+  </div>
 
 </body>
 </html>
