--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">Welcome to ZiBong World</a></h1>
+  <h1><a href="index.html"
+  style="text-decoration:none">
+  Welcome to ZiBong World</a></h1>
   <ol>
-    <li><a href="who.html">Who is ZiBong??</a></li>
-    <li><a href="how.html">How is she?</a></li>
-    <li><a href="beautiful.html">Is she beautiful?</a></li>
+    <li><a href="who.html"
+    style="text-decoration:none">
+    Who is ZiBong??</a></li>
+    <li><a href="how.html"
+    style="text-decoration:none">
+    How is she?</a></li>
+    <li><a href="beautiful.html"
+    style="text-decoration:none">Is she beautiful?</a></li>
   </ol>
-<h2>반갑습니다</h2>
-  <p>이 곳은 지봉이에 대한 정보를 제공하는 사이트이다.<br>
+  <div style="margin-left:30px">
+    <h2>반갑습니다</h2>
+    이 곳은 지봉이에 대한 정보를 제공하는 사이트이다.<br>
     환영합니다.
-  </p>
-
+  </div>
+<input type="checkbox">_<input type="checkbox">
 </body>
 </html>
