--- a/울보.html
+++ b/울보.html
@@ -18,19 +18,30 @@
     <li><a href="beautiful.html"
     style="text-decoration:none">Is she beautiful?</a></li>
   </ol>
-  <div style="margin-left:30px">
+  <div style="margin-left:30px;
+  color:lightgrey">
   <h2>그녀는 어떤 사람인가</h2>
   그녀는 약간 소심하고 마음이 여리며 감수성이 풍부하다.<br>
   애교가 많고 잘 웃고 세상에서 젤 귀엽다.(그리고
-  <a href="울보.html">울보</a>
+  <a href="how.html"
+  style="text-decoration:none;
+  color:black; font-weight:bold">
+  울보</a>
   임)<br>
+    <div style="
+    margin-left:30px; margin-top:10px; margin-bottom:10px;
+    color:black">
+    2020년 2월 16일 그녀는 하루에 4번을 울었다고 한다.
+    </div>
   현재 회사에 열심히 다니고 있으며, 자격증 공부도 열심히 하고 있다.<br>
   취미는
-  <a href="짱구노래.html">짱구노래</a>
+  <a href="짱구노래.html"
+  style="text-decoration:none;
+  color:lightgrey">
+  짱구노래</a>
   부르기이다.<br>
   올해 목표는 10kg 감량이라고 한다.<br>
   행운을 빈다
   </div>
-
 </body>
 </html>
