--- a/쌍커풀.html
+++ b/쌍커풀.html
@@ -18,16 +18,27 @@
     <li><a href="beautiful.html"
     style="text-decoration:none">Is she beautiful?</a></li>
   </ol>
-  <div style="margin-left:30px">
+  <div style="margin-left:30px;
+  color:lightgrey;">
   <h2>그녀는 누구인가</h2>
   지봉이는 귀여운 여자아이이다.<br>
   그녀는 20세기에 한국에서 태어났으며, 원래는
-  <a href="쌍커풀.html">쌍커풀</a>
+  <a href="who.html"
+  style="text-decoration:none;
+  color:black; font-weight:bold">
+  쌍커풀</a>
   이 없었다고 한다.<br>
+    <div style="
+    margin-left:30px; margin-top:10px; margin-bottom:10px;
+    color:black">
+    예쁘게 잘 된 것으로 알려져 있다.
+    </div>
   평범한 가정에서 태어났고 이사를 많이 다닌 것으로 알려져 있다.<br>
-  키는 1m~2m 사이이고, 몸무게는 극비이다.<br>
   현재 엄청 좋은
-  <a href="남자친구.html">남자친구</a>
+  <a href="남자친구.html"
+  style="text-decoration:none;
+  color:lightgrey">
+  남자친구</a>
   가 있는 것으로 알려져 있음.
   </div>
 
