--- a/index.html
+++ b/index.html
@@ -1,28 +1,80 @@
 <!doctype html>
 <html>
 <head>
-  <title>ZiBong World</title>
-  <meta charset="utf-8">
+<title>ZiBong World</title>
+<meta charset="utf-8">
+<style type="text/css">
+a:link{text-decoration:none;}
+a:visited{color:black;text-decoration: none;}
+a:hover{color:#0000FF; text-decoration: underline;}
+a:active{color:#0000FF; text-decoration: none;}
+div#back{
+  width:100%;
+  height:100%;
+  position:absolute; top:0;left:0;right:0;bottom:0;
+  margin:0 auto;
+  background-color:silver
+}
+#page{
+  width:650px;
+  height:95%;
+  background-color: white;
+  position:absolute; top:20px;left:0;right:0;bottom:20px;
+  margin:0 auto;
+}
+#left{
+  margin-top:10px;
+  width:35%;
+  height:75%;
+  float:left;
+  border-right:1px solid silver;
+  border-top:1px solid silver;
+}
+#right{
+  margin-top:10px;
+  width:64%;
+  height:75%;
+  float:left;
+  border-top:1px solid silver;
+}
+#bottom{
+  width:100%;
+  height:10%;
+  float:left;
+  border-top:3px solid silver;
+}
+</style>
 </head>
 <body>
-  <h1><a href="index.html"
-  style="text-decoration:none">
-  Welcome to ZiBong World</a></h1>
-  <ol>
-    <li><a href="who.html"
-    style="text-decoration:none">
-    Who is ZiBong??</a></li>
-    <li><a href="how.html"
-    style="text-decoration:none">
-    How is she?</a></li>
-    <li><a href="beautiful.html"
-    style="text-decoration:none">Is she beautiful?</a></li>
-  </ol>
-  <div style="margin-left:30px">
-    <h2>반갑습니다</h2>
-    이 곳은 지봉이에 대한 정보를 제공하는 사이트이다.<br>
-    환영합니다.
+<div id="back">
+<div id="page">
+<h1 style="text-align:center;"><a href="index.html"
+style="text-decoration:none;color:black;">
+<span style="color:red; font-size:1.5em">♥</span> Welcome to ZiBong World <span style="color:red; font-size:1.5em">♥</span></a></h1>
+  <div id="left">
+  <font size="4em">
+  <ol style="line-height:2em;">
+  <li><a href="who.html">
+  Who is ZiBong??</a></li>
+  <li><a href="how.html">
+  How is she?</a></li>
+  <li><a href="beautiful.html">
+  Is she beautiful?</a></li></ol></font>
   </div>
-<input type="checkbox">_<input type="checkbox">
+  <div id="right">
+  <div style="margin-left:30px; margin-top:30px; margin-right:30px;">
+  <h2>반갑습니다</h2>
+  이 곳은 지봉이에 대한 정보를 제공하는 사이트입니다.<br>
+  환영합니다.
+  </div>
+  <br>
+  <img src="picture1.png" style="width:50%">
+  </div>
+  <div id="bottom">
+  secret page
+  </div>
+
+</div>
+</div>
 </body>
 </html>
