--- a/짱구노래.html
+++ b/짱구노래.html
@@ -1,47 +1,89 @@
 <!doctype html>
 <html>
 <head>
-  <title>ZiBong World</title>
-  <meta charset="utf-8">
+<title>ZiBong World</title>
+<meta charset="utf-8">
+<style type="text/css">
+a:link{text-decoration:none;}
+a:visited{color:black;text-decoration: none;}
+a:hover{color:#0000FF; text-decoration: underline;}
+a:active{color:#0000FF; text-decoration: none;}
+div#back{
+  width:100%;
+  height:100%;
+  position:absolute; top:0;left:0;right:0;bottom:0;
+  margin:0 auto;
+  background-color:silver
+}
+#page{
+  width:650px;
+  height:95%;
+  background-color: white;
+  position:absolute; top:20px;left:0;right:0;bottom:20px;
+  margin:0 auto;
+}
+#left{
+  margin-top:10px;
+  width:35%;
+  height:75%;
+  float:left;
+  border-right:1px solid silver;
+  border-top:1px solid silver;
+}
+#right{
+  margin-top:10px;
+  width:64%;
+  height:75%;
+  float:left;
+  border-top:1px solid silver;
+}
+#bottom{
+  width:100%;
+  height:10%;
+  float:left;
+  border-top:3px solid silver;
+}
+</style>
 </head>
 <body>
-  <h1><a href="index.html"
-  style="text-decoration:none">
-  Welcome to ZiBong World</a></h1>
-  <ol>
-    <li><a href="who.html"
-    style="text-decoration:none">
-    Who is ZiBong??</a></li>
-    <li><a href="how.html"
-    style="text-decoration:none; background-color:blue; color:white;">
-    How is she?</a></li>
-    <li><a href="beautiful.html"
-    style="text-decoration:none">Is she beautiful?</a></li>
-  </ol>
-  <div style="margin-left:30px;
-  color:lightgrey">
+<div id="back">
+<div id="page">
+<h1 style="text-align:center;"><a href="index.html"
+style="text-decoration:none;color:black;">
+<span style="color:red; font-size:1.5em">♥</span> Welcome to ZiBong World <span style="color:red; font-size:1.5em">♥</span></a></h1>
+  <div id="left">
+  <font size="4em">
+  <ol style="line-height:2em;">
+  <li><a href="who.html" >
+  Who is ZiBong??</a></li>
+  <li><a href="how.html"><strong>
+  How is she?</strong></a></li>
+  <li><a href="beautiful.html">
+  Is she beautiful?</a></li></ol></font>
+  </div>
+  <div id="right">
+  <div style="margin-left:30px; margin-top:30px; margin-right:30px; color:lightgrey">
   <h2>그녀는 어떤 사람인가</h2>
   그녀는 약간 소심하고 마음이 여리며 감수성이 풍부하다.<br>
-  애교가 많고 잘 웃고 세상에서 젤 귀엽다.(그리고
-  <a href="how.html"
-  style="text-decoration:none;
-  color:lightgrey">
-  울보</a>
-  임)<br>
+  애교가 많고 잘 웃고 세상에서 젤 귀엽다.(그리고 울보임)<br>
   현재 회사에 열심히 다니고 있으며, 자격증 공부도 열심히 하고 있다.<br>
-  취미는
-  <a href="how.html"
-  style="text-decoration:none;
-  color:black; font-weight:bold">
-  짱구노래</a>
-  부르기이다.<br>
-    <div style="
-    margin-left:30px; margin-top:10px; margin-bottom:10px;
-    color:black">
-    남자친구의 이름을 넣어서 부르는 모습이 자주 목격된다.
-    </div>
+  취미는 짱구노래 부르기이다.<br>
+  <div style="
+  margin-left:30px; margin-top:10px; margin-bottom:10px;
+  color:black; ">
+  <a href="how.html" style="font-weight:bold">남자친구의 이름을 넣어서 부르는 모습이 자주 목격된다.</a>
+  </div>
   올해 목표는 10kg 감량이라고 한다.<br>
   행운을 빈다
   </div>
+  <br>
+  <img src="picture3.png" style="width:50%">
+  </div>
+  <div id="bottom">
+  secret page
+  </div>
+
+</div>
+</div>
 </body>
 </html>
