--- a/index.html
+++ b/index.html
@@ -69,6 +69,22 @@ style="text-decoration:none;color:black;">
   </div>
   <br>
   <img src="picture1.png" style="width:50%">
+  <div id="lv-container" data-id="city" data-uid="MTAyMC80ODk0OS8yNTQ0Mw==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+</div>
   </div>
   <div id="bottom">
   secret page
