--- a/index.html
+++ b/index.html
@@ -1,96 +1,63 @@
 <!doctype html>
 <html>
 <head>
-<title>ZiBong World</title>
-<meta charset="utf-8">
-<style type="text/css">
-a:link{text-decoration:none;}
-a:visited{color:black;text-decoration: none;}
-a:hover{color:#0000FF; text-decoration: underline;}
-a:active{color:#0000FF; text-decoration: none;}
-div#back{
-  width:100%;
-  height:100%;
-  position:absolute; top:0;left:0;right:0;bottom:0;
-  margin:0 auto;
-  background-color:silver
-}
-#page{
-  width:650px;
-  height:95%;
-  background-color: white;
-  position:absolute; top:20px;left:0;right:0;bottom:20px;
-  margin:0 auto;
-}
-#left{
-  margin-top:10px;
-  width:35%;
-  height:75%;
-  float:left;
-  border-right:1px solid silver;
-  border-top:1px solid silver;
-}
-#right{
-  margin-top:10px;
-  width:64%;
-  height:75%;
-  float:left;
-  border-top:1px solid silver;
-}
-#bottom{
-  width:100%;
-  height:10%;
-  float:left;
-  border-top:3px solid silver;
-}
-</style>
+  <title>ZiBong World</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="back">
-<div id="page">
-<h1 style="text-align:center;"><a href="index.html"
-style="text-decoration:none;color:black;">
-<span style="color:red; font-size:1.5em">♥</span> Welcome to ZiBong World <span style="color:red; font-size:1.5em">♥</span></a></h1>
-  <div id="left">
-  <font size="4em">
-  <ol style="line-height:2em;">
-  <li><a href="who.html">
-  Who is ZiBong??</a></li>
-  <li><a href="how.html">
-  How is she?</a></li>
-  <li><a href="beautiful.html">
-  Is she beautiful?</a></li></ol></font>
-  </div>
-  <div id="right">
-  <div style="margin-left:30px; margin-top:30px; margin-right:30px;">
-  <h2>반갑습니다</h2>
-  이 곳은 지봉이에 대한 정보를 제공하는 사이트입니다.<br>
-  환영합니다.
-  </div>
-  <br>
-  <img src="picture1.png" style="width:50%">
-  <div id="lv-container" data-id="city" data-uid="MTAyMC80ODk0OS8yNTQ0Mw==">
-	<script type="text/javascript">
-   (function(d, s) {
-       var j, e = d.getElementsByTagName(s)[0];
-
-       if (typeof LivereTower === 'function') { return; }
-
-       j = d.createElement(s);
-       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-       j.async = true;
-
-       e.parentNode.insertBefore(j, e);
-   })(document, 'script');
-	</script>
-<noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
-</div>
+  <div id="top">
+    <h1><a href="index.html">
+    <span class="heart">♥</span> Welcome to ZiBong World <span class="heart">♥</span></a></h1>
   </div>
   <div id="bottom">
-  secret page
+    <div id="left">
+      <ol>
+        <li><a href="who.html">
+        Who is ZiBong??</a></li>
+        <li><a href="how.html">
+        How is she?</a></li>
+        <li><a href="beautiful.html">
+        Is she beautiful?</a></li>
+      </ol>
+      <div id="buttons">
+        <input type="button" value="Hi" onclick="alert('안뇽 ㅎㅎ')">
+        <input type="button" value="Hey" onclick="alert('메롱 ㅎㅎ')">
+        <input type="button" value="sex" onclick="alert('fuck me')"><br>
+        <input id="day_night" type="button" value="night" onclick="
+          var bodystyle = document.querySelector('body').style;
+          if(this.value === 'night'){
+            bodystyle.backgroundColor='black';
+            this.value='day'
+          } else {
+            bodystyle.backgroundColor='silver';
+            this.value='night'
+          }
+        ">
+      </div>
+    </div>
+    <div id="right">
+      <h2>반갑습니다</h2>
+      <p>
+        이 곳은 지봉이에 대한 정보를 제공하는 사이트입니다.<br>
+      </p>
+      <img id="ompang" src="picture1.png"><br>
+      지금 기분이 어떤지 적고 엔터를 쳐보세요!<br>
+      → <input type="text" size="36" onchange="
+      if(this.value.length <= 3){
+        alert('구래쬬')
+      } else {
+        if(this.value.length <= 10){
+          alert('아구 구래쬬')
+        } else {
+          alert('아구~~~~~ 구래쬬~~~~?')
+        }
+      }
+      ">
+    </div>
   </div>
-
-</div>
-</div>
+  <div id="foot">
+    secret page
+  </div>
 </body>
 </html>
