--- a/쌍커풀.html
+++ b/쌍커풀.html
@@ -1,75 +1,56 @@
 <!doctype html>
 <html>
 <head>
-<title>ZiBong World</title>
-<meta charset="utf-8">
-<style type="text/css">
-a:link{text-decoration:none;}
-a:visited{color:black;text-decoration: none;}
-a:hover{color:#0000FF; text-decoration: underline;}
-a:active{color:#0000FF; text-decoration: none;}
-div#back{
-  width:100%;
-  height:100%;
-  position:absolute; top:0;left:0;right:0;bottom:0;
-  margin:0 auto;
-  background-color:silver
-}
-#page{
-  width:650px;
-  height:95%;
-  background-color: white;
-  position:absolute; top:20px;left:0;right:0;bottom:20px;
-  margin:0 auto;
-}
-#left{
-  margin-top:10px;
-  width:35%;
-  height:75%;
-  float:left;
-  border-right:1px solid silver;
-  border-top:1px solid silver;
-}
-#right{
-  margin-top:10px;
-  width:64%;
-  height:75%;
-  float:left;
-  border-top:1px solid silver;
-}
-#bottom{
-  width:100%;
-  height:10%;
-  float:left;
-  border-top:3px solid silver;
-}
-</style>
+  <title>ZiBong World</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="back">
-<div id="page">
-<h1 style="text-align:center;"><a href="index.html"
-style="text-decoration:none;color:black;">
-<span style="color:red; font-size:1.5em">♥</span> Welcome to ZiBong World <span style="color:red; font-size:1.5em">♥</span></a></h1>
-  <div id="left">
-  <font size="4em">
-  <ol style="line-height:2em;">
-  <li><a href="who.html">
-  <strong>Who is ZiBong??</strong></a></li>
-  <li><a href="how.html">
-  How is she?</a></li>
-  <li><a href="beautiful.html">
-  Is she beautiful?</a></li></ol></font>
+  <div id="top">
+    <h1><a href="index.html">
+    <span class="heart">♥</span> Welcome to ZiBong World <span class="heart">♥</span></a></h1>
   </div>
+  <div id="bottom">
+    <div id="left">
+      <ol>
+        <li><a href="who.html" id="present">
+        Who is ZiBong??</a></li>
+        <li><a href="how.html">
+        How is she?</a></li>
+        <li><a href="beautiful.html">
+        Is she beautiful?</a></li>
+      </ol>
+    </div>
+    <div id="right">
+      <div id="deactivation">
+        <h2>그녀는 누구인가</h2>
+        <p>
+        지봉이는 귀여운 여자아이이다.<br>
+        그녀는 20세기에 한국에서 태어났으며, 원래는 쌍커풀이 없었다고 한다.<br>
+        <div class="focus">
+          <a href="who.html">예쁘게 잘 된 것으로 알려져 있다.</a>
+        </div>
+        평범한 가정에서 태어났고 이사를 많이 다닌 것으로 알려져 있다.<br>
+        키는 1m~2m 사이이고, 몸무게는 극비이다.<br>
+        현재 엄청 좋은 남자친구가 있는 것으로 알려져 있음.
+        </p>
+      </div>
+      <br>
+      <img id="ompang" src="picture2.png">
+    </div>
+  </div>
+  <div id="foot">
+    secret page
+  </div>
+</body>
+
   <div id="right">
-  <div style="margin-left:30px; margin-top:30px; margin-right:30px; color:lightgrey">
+  <div id="deactivation">
   <h2>그녀는 누구인가</h2>
   지봉이는 귀여운 여자아이이다.<br>
   그녀는 20세기에 한국에서 태어났으며, 원래는 쌍커풀이 없었다고 한다.<br>
-  <div style="
-  margin-left:30px; margin-top:10px; margin-bottom:10px;
-  color:black; ">
-  <a href="who.html" style="font-weight:bold">예쁘게 잘 된 것으로 알려져 있다.</a>
+  <div class="focus">
+  <a href="who.html">예쁘게 잘 된 것으로 알려져 있다.</a>
   </div>
   평범한 가정에서 태어났고 이사를 많이 다닌 것으로 알려져 있다.<br>
   키는 1m~2m 사이이고, 몸무게는 극비이다.<br>
